# parcel-lcms

./: .gitignore  CLAUDE.md  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt  run_pipeline.sh
outputs/: acreage_comparison_results.csv  exact_method_comparison.csv  parcel_land_use_results_20250820_155929.csv  processing_report_20250820_155929.txt  processing_report_20250820_161748.txt  processing_summary_20250820_155929.json  processing_summary_20250820_161748.json
scripts/: analyze_acre_weighted_stats.py  analyze_oregon_raster.py  analyze_raster_comparison_optimized.py  create_benton_sample.py
src/: __init__.py  base_processor.py  chunk_manager.py  config.py  data_loader.py  main.py  parallel_processor.py  preprocessor.py  result_aggregator.py  zonal_processor.py  zonal_processor_exact.py  zonal_processor_fractional.py  zonal_processor_optimized.py
tests/: benchmark_fractional_methods.py  test_acreage_validation.py  test_exact_method.py  test_fractional_pixels.py  test_pipeline.py  test_real_data_comparison.py
