[project]
name = "parcel-lcms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask[complete]>=2025.7.0",
    "geopandas>=1.1.1",
    "psutil>=7.0.0",
    "pyogrio>=0.11.1",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "rasterstats>=0.20.0",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]
